# fincontagion

./: .gitignore  README.md  config.yaml  datamodel.py  errors.py  firesale.py  io_utils.py  network.py  pyproject.toml  shocks.py  simulate.py  tree.txt
algorithms/: clearing.py  debtrank.py  macro_shocks.py  metrics.py
data/processed/: 20_asset_classes.csv  20_banks.csv  20_exposures.csv  20_macro_scenarios.csv  20_parameters.yaml  20_portfolios.csv  20_scenario_catalog.csv
experiments/: run_grid.py
simulator/: __init__.py  engine.py  protocols.py
